--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -31,23 +31,19 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: Accept Android SDK licenses (best-effort on ubuntu)
-        run: |
-          yes | sdkmanager --licenses || true
-        shell: bash
+      - name: Install Gradle (if no wrapper present)
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: '8.7'
 
       - name: Build debug APK
-        run: ./gradlew assembleDebug --no-daemon --stacktrace
+        run: gradle assembleDebug --no-daemon --stacktrace
 
       - name: Run unit tests
-        run: ./gradlew testDebugUnitTest --no-daemon --stacktrace
+        run: gradle testDebugUnitTest --no-daemon --stacktrace
 
       - name: Upload debug APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
           path: app/build/outputs/apk/debug/app-debug.apk
-
