--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.valen.cocinanuevo">
 
-    <application
+    <application android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round"
         android:allowBackup="true"
         android:label="CocinaNuevo"
         android:supportsRtl="true"
@@ -17,3 +17,4 @@
         </activity>
     </application>
 </manifest>
+
