Notificaciones funciona, puedo editar atrasar 1 hora, y cambiar a terminada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
             </intent-filter>
         </activity>
 
+        <!-- Activity para abrir/editar pedidos desde la notificación -->
+        <activity
+            android:name=".OrderEditActivity"
+            android:exported="false" />
+
         <!-- Receiver para notificaciones programadas -->
         <receiver
             android:name=".notifications.NotificationReceiver"
